{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerInputMap",
            "id": "b251fdee-838c-402f-8553-d6e3c5e9ad61",
            "actions": [
                {
                    "name": "ForwardBackward",
                    "type": "Value",
                    "id": "8e438592-f7c9-43cb-8798-b662c07f0103",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightLeft",
                    "type": "Value",
                    "id": "e64e3101-ed81-44f6-925b-fa3133fd0cc9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Diagonal_East",
                    "type": "Button",
                    "id": "8b0cceb4-9d44-4828-998b-202793d20488",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Diagonal_West",
                    "type": "Button",
                    "id": "8a4aec90-3265-4551-a73d-68e6aac1de46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "eea2d199-9e60-444b-9f74-a1d0d4874c40",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardBackward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c01c7189-dd0f-437f-9328-bc156ddeac2f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8ec7f734-ba05-4c79-93f3-02b843aa3622",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b48eb059-27f2-4b7b-b6c4-efec01a4f4c3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Diagonal_East",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "bbf89334-8424-4adc-ab1e-a4f607b72f14",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "43b8a27f-014a-421a-9751-add155ca9624",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "abe846c3-7947-4686-8571-e9e91cb3b4e1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a8c82a67-bd74-45d5-bb37-ed5a583c533e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Diagonal_West",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}